--- a/backup/index.html
+++ b/backup/index.html
@@ -108,10 +108,10 @@
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/2/Luz2_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/2/Luz2_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
@@ -122,10 +122,10 @@
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/3/Luz3_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/3/Luz3_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
@@ -136,66 +136,94 @@
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/4/Luz4_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/4/Luz4_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
                             <!----------------------------------------Track 5---------------------------------------->
                             <div id="faixa5" class="track5 mediaTrack">
-                                <video class="video" muted loop data-src="../data/faixas/5/5.mp4">
+                                <video class="video" muted loop data-src="../data/track/5/Luz5_video.mp4">
                                 </video>
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/5/Luz5_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/5/Luz5_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
                             <!----------------------------------------Track 6---------------------------------------->
                             <div id="faixa6" class="track6 mediaTrack">
-                                <video class="video" muted loop data-src="../data/faixas/6/6.mp4">
+                                <video class="video" muted loop data-src="../data/track/6/Luz6_video.mp4">
                                 </video>
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/6/Luz6_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/6/Luz6_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
                             <!----------------------------------------Track 7---------------------------------------->
                             <div id="faixa7" class="track7 mediaTrack">
-                                <video class="video" muted loop data-src="../data/faixas/5/5.mp4">
+                                <video class="video" muted loop data-src="../data/track/7/Luz7_video.mp4">
                                 </video>
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/7/Luz7_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/7/Luz7_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
 
                             <!----------------------------------------Track 8---------------------------------------->
                             <div id="faixa8" class="track8 mediaTrack">
-                                <video class="video" muted loop data-src="../data/faixas/4/4.mp4">
+                                <video class="video" muted loop data-src="../data/track/8/Luz8_video.mp4">
                                 </video>
                                 <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
                                 </video>
                                 <audio class="poesia" loop>
-                                    <source src="../data/faixas/1/audio1.mp3" type="audio/mpeg">
+                                    <source src="../data/track/8/Luz8_voz.wav" type="audio/mpeg">
                                 </audio>
                                 <audio class="jazz" loop>
-                                    <source src="../data/faixas/1/BradMehldau_AfterBach.mp3" type="audio/mpeg">
+                                    <source src="../data/track/8/Luz8_instrumental.wav" type="audio/mpeg">
+                                </audio>
+                            </div>
+
+                            <!----------------------------------------Track 9---------------------------------------->
+                            <div id="faixa9" class="track9 mediaTrack">
+                                <video class="video" muted loop data-src="../data/track/9/Luz9_video.mp4">
+                                </video>
+                                <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
+                                </video>
+                                <audio class="poesia" loop>
+                                    <source src="../data/track/9/Luz9_voz.wav" type="audio/mpeg">
+                                </audio>
+                                <audio class="jazz" loop>
+                                    <source src="../data/track/9/Luz9_instrumental.wav" type="audio/mpeg">
+                                </audio>
+                            </div>
+
+                            <!----------------------------------------Track 10---------------------------------------->
+                            <div id="faixa10" class="track10 mediaTrack">
+                                <video class="video" muted loop data-src="../data/track/10/Luz10_video.mp4">
+                                </video>
+                                <video class="legendas" muted loop data-src="../data/faixas/1/legendas.mp4">
+                                </video>
+                                <audio class="poesia" loop>
+                                    <source src="../data/track/10/Luz10_voz.wav" type="audio/mpeg">
+                                </audio>
+                                <audio class="jazz" loop>
+                                    <source src="../data/track/10/Luz10_instrumental.wav" type="audio/mpeg">
                                 </audio>
                             </div>
                         </div>
