--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--INTRO-->
         <div class="introSelvagem visible" id="introSelvagem">
             <div class="teaser">
-                <video autoplay loop muted>
+                <video class="video"  autoplay loop muted preload="auto">
                     <source src="data/teaser_crop.mp4" type="video/mp4">
                 </video>
             </div>
