--- a/index.html
+++ b/index.html
@@ -9,10 +9,61 @@
 
 <body>
     <main>
+         <!--Enter-->
+         <div class="introSelvagem visible" id="introSelvagem">
+            <div class="teaser">
+                <video class="video" autoplay loop muted>
+                    <source src="data/teaser_crop.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="grid gridIntro">
+                <div>
+                    <p>Marco</p>
+                    <p>Martins</p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p class="textAlignRight">e</p>
+                </div>
+                <div>
+                    <p>Alexandre</p>
+                    <p>Frazão</p>
+                    <p>Carolina Santos</p>
+                    <p>João Paulo</p>
+                    <p>Esteves da Silva</p>
+                    <p>Leon</p>
+                    <p>Baldesberger</p>
+                    <p>Mikhail Shumov</p>
+                    <p>Romeu</p>
+                    <p>Madeira</p>
+                    <p><br></p>
+                    <p>Zeca</p>
+                    <p>Medeiros</p>
+                </div>
+                <div>
+                    <p>a partir de</p>
+                    <p>“Selvagem”</p>
+                    <p class="textAlignRight">de</p>
+                    <p>Salvador Santos</p>
+                </div>
+                <div class="col-10-desktop">
+                    <p>Luz</p>
+                    <div id="buttonStart">
+                        <p>Começa a</p>
+                        <p class="textAlignRight">experiência</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--INTRO-->
         <div class="introSelvagem visible" id="introSelvagem">
             <div class="teaser">
-                <video class="video"  autoplay loop muted preload="auto">
+                <video class="video" autoplay loop muted>
                     <source src="data/teaser_crop.mp4" type="video/mp4">
                 </video>
             </div>
