--- a/index.html
+++ b/index.html
@@ -9,59 +9,28 @@
 
 <body>
     <main>
-         <!--Enter-->
-         <div class="introSelvagem visible" id="introSelvagem">
-            <div class="teaser">
-                <video class="video" autoplay loop muted>
-                    <source src="data/teaser_crop.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="grid gridIntro">
-                <div>
-                    <p>Marco</p>
-                    <p>Martins</p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p><br></p>
-                    <p class="textAlignRight">e</p>
-                </div>
-                <div>
-                    <p>Alexandre</p>
-                    <p>Frazão</p>
-                    <p>Carolina Santos</p>
-                    <p>João Paulo</p>
-                    <p>Esteves da Silva</p>
-                    <p>Leon</p>
-                    <p>Baldesberger</p>
-                    <p>Mikhail Shumov</p>
-                    <p>Romeu</p>
-                    <p>Madeira</p>
-                    <p><br></p>
-                    <p>Zeca</p>
-                    <p>Medeiros</p>
-                </div>
-                <div>
-                    <p>a partir de</p>
-                    <p>“Selvagem”</p>
-                    <p class="textAlignRight">de</p>
-                    <p>Salvador Santos</p>
-                </div>
-                <div class="col-10-desktop">
-                    <p>Luz</p>
-                    <div id="buttonStart">
-                        <p>Começa a</p>
-                        <p class="textAlignRight">experiência</p>
-                    </div>
-                </div>
-            </div>
+<!--Enter-->
+<div class="enterSelvagem visible" id="enterSelvagem">
+    <div class="teaser">
+        <video class="video" autoplay loop muted>
+            <source src="data/teaser_crop.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid gridIntro">
+        <div>
+            <p>Palavra-passe</p>
+            <input type="password" id="passwordInput" placeholder="Digite a palavra-passe">
+            <p><br></p>
+            <button id="submitPassword" class="unstyled-button"><p class="textAlignRight1">Submeter</p></button>
         </div>
+        <div class="col-10-desktop">
+            <p>Luz</p>
+        </div>
+    </div>
+</div>
+
         <!--INTRO-->
-        <div class="introSelvagem visible" id="introSelvagem">
+        <div class="introSelvagem hidden" id="introSelvagem">
             <div class="teaser">
                 <video class="video" autoplay loop muted>
                     <source src="data/teaser_crop.mp4" type="video/mp4">
@@ -521,6 +490,7 @@
             </div>
     </main>
     <div id="cursor"></div>
+    <script src="js/password.js"></script>
     <script src="js/mobileWeight.js"></script>
     <script src="js/script_final.js"></script>
 </body>
