--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="grid gridIntro">
         <div>
-            <p>Palavra-passe</p>
+            <p>Palavra-passe:</p>
             <input type="password" id="passwordInput" placeholder="Digite a palavra-passe">
             <p><br></p>
             <button id="submitPassword" class="unstyled-button"><p class="textAlignRight1">Submeter</p></button>
