--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
 
 <body>
     <main>
-<!--Enter-->
-<div class="enterSelvagem visible" id="enterSelvagem">
-    <div class="teaser">
-        <video class="video" autoplay loop muted>
-            <source src="data/teaser_crop.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div class="grid gridIntro">
-        <div>
-            <p>Palavra-passe:</p>
-            <input type="password" id="passwordInput" placeholder="Digite a palavra-passe">
-            <p><br></p>
-            <button id="submitPassword" class="unstyled-button"><p class="textAlignRight1">Submeter</p></button>
+        <!--Enter-->
+        <div class="enterSelvagem visible" id="enterSelvagem">
+            <div class="teaser">
+                <video class="video" autoplay loop muted>
+                    <source src="data/teaser_crop.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="grid gridIntro">
+                <div>
+                    <p>Palavra-passe:</p>
+                    <input type="password" id="passwordInput" placeholder="Digite a palavra-passe">
+                    <p><br></p>
+                    <button id="submitPassword" class="unstyled-button">
+                        <p class="textAlignRight1">Submeter</p>
+                    </button>
+                </div>
+                <div class="col-10-desktop">
+                    <p>Luz</p>
+                </div>
+            </div>
         </div>
-        <div class="col-10-desktop">
-            <p>Luz</p>
-        </div>
-    </div>
-</div>
 
         <!--INTRO-->
         <div class="introSelvagem hidden" id="introSelvagem">
@@ -285,8 +287,8 @@
                         </div>
                         <!----------------------------------------Track 10---------------------------------------->
                         <div id="faixa10" class="track10 mediaTrack">
-                            <video class="video" preload="auto">
-                                <source src="data/track/10/Luz10_video.mp4" type="video/mp4">
+                            <video id="videoFaixa10" class="video" preload="auto">
+                                <source src="data/teaser_crop.mp4" type="video/mp4">
                             </video>
                             <video muted class="legendas" preload="auto">
                                 <source src="data/faixas/1/legendas.mp4" type="video/mp4">
@@ -333,161 +335,161 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-
-            <!--OUTRO-->
-            <div class="outroSelvagem hidden" id="outroSelvagem">
-                <div class="teaser">
-                    <video autoplay loop muted>
-                        <source src="data/teaser_crop.mp4" type="video/mp4">
-                    </video>
+        <!--OUTRO-->
+        <div class="outroSelvagem hidden" id="outroSelvagem">
+            <div class="teaser">
+                <video autoplay loop muted>
+                    <source src="data/teaser_crop.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="grid gridOutro">
+                <div>
+                    <p>Vídeo-álbum<br>inspirado na<br>obra<br>
+                        “Selvagem”, de<br>
+                        Salvador <br>Santos</p>
+                    <p class="textAlignRight">Dom Quixote</p>
+                    <p>2021</p>
                 </div>
-                <div class="grid gridOutro">
-                    <div>
-                        <p>Vídeo-álbum<br>inspirado na<br>obra<br>
-                            “Selvagem”, de<br>
-                            Salvador <br>Santos</p>
-                        <p class="textAlignRight">Dom Quixote</p>
-                        <p>2021</p>
-                    </div>
-                    <div class="mobileRow2">
-                        <p>Direcção<br>Artística:<br>
-                            Marco Martins</p>
-                        <p class="textAlignRight">e</p>
-                        <p class="textAlignRight">Carolina</p>
-                        <p>Santos</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Composição</p>
-                        <p class="textAlignRight">Baixo</p>
-                        <p>Marco Martins</p>
-                        <p class="textAlignRight">Bateria</p>
-                        <p>Alexandre Frazão</p>
-                        <p class="textAlignRight">Voz</p>
-                        <p class="textAlignRight">Carolina Santos</p>
-                        <p class="textAlignRight">Piano</p>
-                        <p>João Paulo<br>Esteves da Silva</p>
-                        <p class="textAlignRight">Trompete</p>
-                        <p>Leon<br>Baldesberger</p>
-                        <p class="textAlignRight">Violoncelo</p>
-                        <p>Mikhail<br>Shumov</p>
-                        <p class="textAlignRight">Violino</p>
-                        <p>Romeu<br>Madeira</p>
-                        <p class="textAlignRight">Participação<br>Especial</p>
-                        <p>Zeca Medeiros</p>
-                        <p><br></p>
-                        <p class="textAlignRight">Gravação</p>
-                        <p>Tiago Freitas</p>
-                        <p>Cineteatro Louletano</p>
-                        <p>Loulé, 12/13<br>Março 2024</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Mistura<br>e Masterização</p>
-                        <p class="textAlignRight">Tiago Freitas Audiomix Studio, Maio/Junho 2024</p>
-                        <p class="textAlignRight">Realização<br>e Pós-produção<br>Vídeo</p>
-                        <p class="textAlignRight">João Catarino</p>
-                        <p class="leftPad">Assistente<br>de Realização</p>
-                        <p>Beatriz<br>Medeiros</p>
-                        <p class="textAlignRight">Assistente<br>Estagiário</p>
-                        <p>Miguel Teixeira</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Intérpretes por<br>ordem de aparição</p>
-                        <p class="textAlignRight">Marco<br>Martins</p>
-                        <p>Carolina Santos</p>
-                        <p>Beatriz Medeiros</p>
-                        <p class="textAlignRight">Elizabeth Siw</p>
-                        <p>Alexandre<br>Martins</p>
-                        <p>Anabela Alves</p>
-                        <p class="textAlignRight">Zeca Medeiros</p>
-                        <p class="textAlignRight">Martim Santos</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Figuração Especial</p>
-                        <p>Ana Maria Teixier</p>
-                        <p>Alda Ramos</p>
-                        <p class="leftPad">Arminda Raposo</p>
-                        <p class="textAlignRight">Cesaltina Sousa</p>
-                        <p>Ermelinda Sousa</p>
-                        <p class="leftPad">Ilda Faria</p>
-                        <p class="leftPad">Irene Lino</p>
-                        <p>Maria Albertina</p>
-                        <p class="leftPad">Farinho</p>
-                        <p>Marieta Cavaco</p>
-                        <p class="leftPad">Olivia Catarino</p>
-                        <p>Alunos do 8º G</p>
-                        <p class="leftPad">e 7º/8º All</p>
-                        <p class="textAlignRight">Included 23/24<br>da Escola Básica<br>São Pedro do Mar<br> – Quarteira
-                        </p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Design</p>
-                        <p>united by</p>
-                        <p class="textAlignRight">Direção de<br>Produção</p>
-                        <p class="leftPad">Ana Palmeiro</p>
-                        <p class="textAlignRight">Assistência<br>de Produção</p>
-                        <p class="leftPad">Rafaella<br>Ambrozio</p>
-                        <p class="textAlignRight">Gestão<br>Financeira</p>
-                        <p class="leftPad">Veronica<br>Vitorino</p>
-                        <p class="textAlignRight">Produção de</p>
-                        <p class="leftPad">Mákina de<br>Cena</p>
-                        <p class="textAlignRight">Apoios</p>
-                        <p class="leftPad">República<br>Portuguesa –<br>Cultura</p>
-                        <p class="textAlignRight"> Direção-Geral<br>das Artes</p>
-                        <p class="leftPad">Município de</p>
-                        <p>Loulé</p>
-                        <p class="leftPad">Cineteatro</p>
-                        <p class="textAlignRight">Louletano</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Agradecimentos</p>
-                        <p>Universidade<br>Sénior de Loulé</p>
-                        <p class="leftPad">- Associação</p>
-                        <p>Amigos do</p>
-                        <p class="leftPad">Alentejo</p>
-                        <p>Agrupamento de</p>
-                        <p class="leftPad">Escolas Dr.<br>Laura Ayres</p>
-                        <p>Quarteira</p>
-                        <p class="textAlignRight">Conservatório<br>de Música</p>
-                        <p>de Loulé</p>
-                        <p>Galerias Municipais</p>
-                        <p class="textAlignRight">- Loulé</p>
-                        <p>CAMA AC</p>
-                        <p class="leftPad">José</p>
-                        <p class="textAlignRight">e Fernanda<br>Palmeiro</p>
-                        <p>Catherina</p>
-                        <p class="leftPad">Cardoso</p>
-                        <p>Fábio Teixeira</p>
-                        <p class="textAlignRight">Joana Oliveira</p>
-                        <p>Mauro Coelho</p>
-                        <p>Nazar Lutsyak</p>
-                        <p class="leftPad">Tânia</p>
-                        <p class="textAlignRight">Teixeira</p>
-                    </div>
-                    <div>
-                        <p class="textAlignRight">Marco Martins<br>toca com</p>
-                        <p>instrumentos</p>
-                        <p class="textAlignRight">JP Custom Guitars</p>
-                        <a href="https://jpcustomguitars.pt/" target="_blank">
-                            <p>www.<br>jpcustomguitars</p>
-                            <p class="textAlignRight">.pt</p>
-                        </a>
-                        <p>A Mákina de</p>
-                        <p class="textAlignRight">Cena</p>
-                        <p>é ums estrutura<br>financiada pela</p>
-                        <p class="textAlignRight">República Portuguesa – Cultura /</p>
-                        <p>Direção-Geral das<br>Artes e<br>pelo Município de<br>Loulé.</p>
-                    </div>
-                    <div>
-                        <p>Reservados todos os direitos do produtor fonográfico e do proprietário da obra gravada,</p>
-                        <p class="textAlignRight">proibidos</p>
-                        <p>a<br>duplicação, o
-                            aluguer, o empréstimo e a utilização da gravação para execução pública </p>
-                        <p class="textAlignRight">e radiodifusão</p>
-                        <p>não autorizados</p>
-                    </div>
+                <div class="mobileRow2">
+                    <p>Direcção<br>Artística:<br>
+                        Marco Martins</p>
+                    <p class="textAlignRight">e</p>
+                    <p class="textAlignRight">Carolina</p>
+                    <p>Santos</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Composição</p>
+                    <p class="textAlignRight">Baixo</p>
+                    <p>Marco Martins</p>
+                    <p class="textAlignRight">Bateria</p>
+                    <p>Alexandre Frazão</p>
+                    <p class="textAlignRight">Voz</p>
+                    <p class="textAlignRight">Carolina Santos</p>
+                    <p class="textAlignRight">Piano</p>
+                    <p>João Paulo<br>Esteves da Silva</p>
+                    <p class="textAlignRight">Trompete</p>
+                    <p>Leon<br>Baldesberger</p>
+                    <p class="textAlignRight">Violoncelo</p>
+                    <p>Mikhail<br>Shumov</p>
+                    <p class="textAlignRight">Violino</p>
+                    <p>Romeu<br>Madeira</p>
+                    <p class="textAlignRight">Participação<br>Especial</p>
+                    <p>Zeca Medeiros</p>
+                    <p><br></p>
+                    <p class="textAlignRight">Gravação</p>
+                    <p>Tiago Freitas</p>
+                    <p>Cineteatro Louletano</p>
+                    <p>Loulé, 12/13<br>Março 2024</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Mistura<br>e Masterização</p>
+                    <p class="textAlignRight">Tiago Freitas Audiomix Studio, Maio/Junho 2024</p>
+                    <p class="textAlignRight">Realização<br>e Pós-produção<br>Vídeo</p>
+                    <p class="textAlignRight">João Catarino</p>
+                    <p class="leftPad">Assistente<br>de Realização</p>
+                    <p>Beatriz<br>Medeiros</p>
+                    <p class="textAlignRight">Assistente<br>Estagiário</p>
+                    <p>Miguel Teixeira</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Intérpretes por<br>ordem de aparição</p>
+                    <p class="textAlignRight">Marco<br>Martins</p>
+                    <p>Carolina Santos</p>
+                    <p>Beatriz Medeiros</p>
+                    <p class="textAlignRight">Elizabeth Siw</p>
+                    <p>Alexandre<br>Martins</p>
+                    <p>Anabela Alves</p>
+                    <p class="textAlignRight">Zeca Medeiros</p>
+                    <p class="textAlignRight">Martim Santos</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Figuração Especial</p>
+                    <p>Ana Maria Teixier</p>
+                    <p>Alda Ramos</p>
+                    <p class="leftPad">Arminda Raposo</p>
+                    <p class="textAlignRight">Cesaltina Sousa</p>
+                    <p>Ermelinda Sousa</p>
+                    <p class="leftPad">Ilda Faria</p>
+                    <p class="leftPad">Irene Lino</p>
+                    <p>Maria Albertina</p>
+                    <p class="leftPad">Farinho</p>
+                    <p>Marieta Cavaco</p>
+                    <p class="leftPad">Olivia Catarino</p>
+                    <p>Alunos do 8º G</p>
+                    <p class="leftPad">e 7º/8º All</p>
+                    <p class="textAlignRight">Included 23/24<br>da Escola Básica<br>São Pedro do Mar<br> – Quarteira
+                    </p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Design</p>
+                    <p>united by</p>
+                    <p class="textAlignRight">Direção de<br>Produção</p>
+                    <p class="leftPad">Ana Palmeiro</p>
+                    <p class="textAlignRight">Assistência<br>de Produção</p>
+                    <p class="leftPad">Rafaella<br>Ambrozio</p>
+                    <p class="textAlignRight">Gestão<br>Financeira</p>
+                    <p class="leftPad">Veronica<br>Vitorino</p>
+                    <p class="textAlignRight">Produção de</p>
+                    <p class="leftPad">Mákina de<br>Cena</p>
+                    <p class="textAlignRight">Apoios</p>
+                    <p class="leftPad">República<br>Portuguesa –<br>Cultura</p>
+                    <p class="textAlignRight"> Direção-Geral<br>das Artes</p>
+                    <p class="leftPad">Município de</p>
+                    <p>Loulé</p>
+                    <p class="leftPad">Cineteatro</p>
+                    <p class="textAlignRight">Louletano</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Agradecimentos</p>
+                    <p>Universidade<br>Sénior de Loulé</p>
+                    <p class="leftPad">- Associação</p>
+                    <p>Amigos do</p>
+                    <p class="leftPad">Alentejo</p>
+                    <p>Agrupamento de</p>
+                    <p class="leftPad">Escolas Dr.<br>Laura Ayres</p>
+                    <p>Quarteira</p>
+                    <p class="textAlignRight">Conservatório<br>de Música</p>
+                    <p>de Loulé</p>
+                    <p>Galerias Municipais</p>
+                    <p class="textAlignRight">- Loulé</p>
+                    <p>CAMA AC</p>
+                    <p class="leftPad">José</p>
+                    <p class="textAlignRight">e Fernanda<br>Palmeiro</p>
+                    <p>Catherina</p>
+                    <p class="leftPad">Cardoso</p>
+                    <p>Fábio Teixeira</p>
+                    <p class="textAlignRight">Joana Oliveira</p>
+                    <p>Mauro Coelho</p>
+                    <p>Nazar Lutsyak</p>
+                    <p class="leftPad">Tânia</p>
+                    <p class="textAlignRight">Teixeira</p>
+                </div>
+                <div>
+                    <p class="textAlignRight">Marco Martins<br>toca com</p>
+                    <p>instrumentos</p>
+                    <p class="textAlignRight">JP Custom Guitars</p>
+                    <a href="https://jpcustomguitars.pt/" target="_blank">
+                        <p>www.<br>jpcustomguitars</p>
+                        <p class="textAlignRight">.pt</p>
+                    </a>
+                    <p>A Mákina de</p>
+                    <p class="textAlignRight">Cena</p>
+                    <p>é ums estrutura<br>financiada pela</p>
+                    <p class="textAlignRight">República Portuguesa – Cultura /</p>
+                    <p>Direção-Geral das<br>Artes e<br>pelo Município de<br>Loulé.</p>
+                </div>
+                <div>
+                    <p>Reservados todos os direitos do produtor fonográfico e do proprietário da obra gravada,</p>
+                    <p class="textAlignRight">proibidos</p>
+                    <p>a<br>duplicação, o
+                        aluguer, o empréstimo e a utilização da gravação para execução pública </p>
+                    <p class="textAlignRight">e radiodifusão</p>
+                    <p>não autorizados</p>
                 </div>
             </div>
+        </div>
     </main>
     <div id="cursor"></div>
     <script src="js/password.js"></script>
