--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <div class="grid gridIntro">
                 <div>
                     <p>Palavra-passe:</p>
-                    <input type="password" id="passwordInput" placeholder="Digite a palavra-passe">
+                    <input id="passwordInput" class="hover-link" placeholder="*****">
                     <p><br></p>
                     <button id="submitPassword" class="unstyled-button">
-                        <p class="textAlignRight1">Submeter</p>
+                        <p class="textAlignRight1 hover-link">Submeter</p>
                     </button>
                 </div>
                 <div class="col-10-desktop">
-                    <p>Luz</p>
+                    <p class="luzTitle">Luz</p>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-10-desktop">
                     <p>Luz</p>
-                    <div id="buttonStart">
+                    <div id="buttonStart" class="hover-link">
                         <p>Começa a</p>
                         <p class="textAlignRight">experiência</p>
                     </div>
@@ -288,7 +288,7 @@
                         <!----------------------------------------Track 10---------------------------------------->
                         <div id="faixa10" class="track10 mediaTrack">
                             <video id="videoFaixa10" class="video" preload="auto">
-                                <source src="data/teaser_crop.mp4" type="video/mp4">
+                                <source src="data/track/10/Luz10_video.mp4" type="video/mp4">
                             </video>
                             <video muted class="legendas" preload="auto">
                                 <source src="data/faixas/1/legendas.mp4" type="video/mp4">
@@ -471,7 +471,7 @@
                     <p>instrumentos</p>
                     <p class="textAlignRight">JP Custom Guitars</p>
                     <a href="https://jpcustomguitars.pt/" target="_blank">
-                        <p>www.<br>jpcustomguitars</p>
+                        <p class="hover-link">www.<br>jpcustomguitars</p>
                         <p class="textAlignRight">.pt</p>
                     </a>
                     <p>A Mákina de</p>
