--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
                 <div class="col-10-desktop">
                     <p>Luz</p>
 
-                    <!--<div id="loading" class="activeLoading">
-                        <p>Loading...</p>       
-                         </div>-->
+                    
 
                     <div id="buttonStart" class="hover-link">
                         <p>Começa a</p>
@@ -156,6 +154,7 @@
                         </div>
                     </div>
                     <div class="grid gridProgram faixas">
+                       
                         <div class="desktopNone"></div>
                         <div>
                             <p class="hover-link faixa textAlignRight faixaNum active-track" data-track="1" onclick="loadGroup(1)">01</p>
@@ -186,6 +185,9 @@
                             <p class="hover-link faixa faixaNum" data-track="9" onclick="loadGroup(9)">Humanidade</p>
                             <p class="hover-link faixa faixaNum" data-track="10" onclick="loadGroup(10)">Arqueologia</p>
                         </div>
+                         <div id="loading">
+                            <p>Loading...</p>       
+                             </div>
                     </div>
                 </div>
             </div>
