--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
                         <!----------------------------------------Track 1---------------------------------------->
                         <div id="faixa1" class="track1 mediaTrack ">
-                            <video preload="auto" muted id="video" class="video"></video>
+                            <video preload="auto" id="video" class="video"></video>
                             <video preload="auto" muted id="legendas" class="legendas"></video>
-                            <audio preload="auto" muted id="poesia" class="poesia"> </audio>
-                            <audio preload="auto" muted id="jazz" class="jazz"></audio>
+                            <audio preload="auto" id="poesia" class="poesia"> </audio>
+                            <audio preload="auto" id="jazz" class="jazz"></audio>
                         </div>
                     </div>
                     <div class="grid gridProgram faixas">
