--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                             </div>
                             <div></div>
                         </div>
+<div id="activediv" class="hidden">
 
+</div>
                         <!----------------------------------------Track 1---------------------------------------->
                         <div id="faixa1" class="track1 mediaTrack ">
                             <video preload="auto" id="video" class="video"></video>
@@ -156,7 +158,7 @@
                     <div class="grid gridProgram faixas">
                        
                         <div class="desktopNone"></div>
-                        <div>
+                        <div div="faixaInteration" id="faixaInteration1">
                             <p class="hover-link faixa textAlignRight faixaNum active-track" data-track="1" onclick="loadGroup(1)">01</p>
                             <p class="hover-link faixa textAlignRight faixaNum" data-track="2" onclick="loadGroup(2)">02</p>
                             <p class="hover-link faixa textAlignRight faixaNum" data-track="3" onclick="loadGroup(3)">03</p>
@@ -171,7 +173,7 @@
                             <p class="hover-link faixa textAlignRight faixaNum" data-track="9" onclick="loadGroup(9)">09</p>
                             <p class="hover-link faixa textAlignRight faixaNum" data-track="10" onclick="loadGroup(10)">10</p>
                         </div>
-                        <div class="faixaTitle">
+                        <div class="faixaTitle" id="faixaInteration2">
                             <p class="hover-link faixa faixaNum active-track" data-track="1" onclick="loadGroup(1)">Luz</p>
                             <p class="hover-link faixa faixaNum" data-track="2" onclick="loadGroup(2)">Fim de Tarde</p>
                             <p class="hover-link faixa faixaNum" data-track="3" onclick="loadGroup(3)">Instantâneo</p>
