--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="teaser">
                 <video class="video" autoplay loop muted>
-                    <source src="data/track/1/Luz1_legendas.mp4" type="video/mp4">
+                    <source src="data/teaser_2.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="grid gridIntro">
