--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="teaser">
                 <video class="video" autoplay loop muted>
-                    <source src="data/teaser_2.mp4" type="video/mp4">
+                    <source src="data/teaser.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="grid gridIntro">
