--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
                         aluguer, o empréstimo e a utilização da gravação para execução pública </p>
                     <p class="textAlignRight">e radiodifusão</p>
                     <p>não autorizados</p>
+                    <p class="hover-link" id="backCredits">Página inicial</p>
                 </div>
             </div>
         </div>
