--- a/index.html
+++ b/index.html
@@ -47,15 +47,7 @@
                     <p><br></p>
                     <p>Zeca</p>
                     <p>Medeiros</p>
-                </div>
-                <div>
-                    <p>a partir de</p>
-                    <p>“Selvagem”</p>
-                    <p class="textAlignRight">de</p>
-                    <p>Salvador Santos</p>
-                </div>
-                <div class="col-10-desktop">
-                    <p>Luz</p>
+
                     <p><br></p>
                     <p><br></p>
                     <p><br></p>
@@ -67,12 +59,22 @@
                     <p><br></p>
                     <div>
                         <p>Palavra-Passe</p>
-                        <input id="passwordInput" class="hover-link" placeholder="**********">
+                        <input id="passwordInput" class="hover-link" placeholder="************">
                         <p><br></p>
                         <button id="submitPassword" class="unstyled-button">
-                            <p class="textAlignRight1 hover-link">Começar</p>
+                            <p class="hover-link">Entrar</p>
                         </button>
                     </div>
+                </div>
+                <div>
+                    <p>a partir de</p>
+                    <p>“Selvagem”</p>
+                    <p class="textAlignRight">de</p>
+                    <p>Salvador Santos</p>
+                </div>
+                <div class="col-10-desktop">
+                    <p>Luz</p>
+                    
                 </div>
             </div>
         </div>
@@ -147,9 +149,8 @@
                         </div>
                     </div>
                     <div class="grid gridProgram faixas">
-                        <div>
+                        <div id="faixaInteration1">
                             <p id="trackNumberPlaying" class="textAlignRight">01</p>
-                            <p><br></p>
                             <p><br></p>
                             <div id="menuContent1">
                                 <div class="faixaTitle">
@@ -205,8 +206,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div div="faixaInteration" id="faixaInteration1">
-                            <div id="trackPlayingdiv" style="display: flex; ">
+                        <div div="faixaInteration" id="faixaInteration2">
+                            <div id="trackPlayingdiv">
                                 <p id="trackPlaying"></p>
                             </div>
                             <p><br></p>
@@ -261,12 +262,15 @@
                                 </div>
                                 <p><br></p>
                                 <p id="creditButton" class="hover-link">Créditos</p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+                                <p id="loading">Loading...</p>
                             </div>
                         </div>
 
-                        <div id="loading">
-                            <p>Loading...</p>
-                        </div>
+                            
                     </div>
                 </div>
             </div>
@@ -341,6 +345,7 @@
                     <p class="leftPad">Arminda Raposo</p>
                     <p class="textAlignRight">Cesaltina Sousa</p>
                     <p>Ermelinda Sousa</p>
+                    <p>Helena Bispo</p>
                     <p class="leftPad">Ilda Faria</p>
                     <p class="leftPad">Irene Lino</p>
                     <p>Maria Albertina</p>
