--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <div></div>
                             <div></div>
-                            <div class="mobileNone"></div>
+                            <div></div>
                             <div class="mobileNone"></div>
                             <div class="mobileNone"></div>
                             <div class="mobileNone"></div>
@@ -112,7 +112,7 @@
                             </div>
                             <div></div>
                             <div></div>
-                            <div class="mobileNone"></div>
+                            <div></div>
                             <div class="mobileNone"></div>
                             <div class="mobileNone"></div>
                             <div class="mobileNone"></div>
