--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="interation hidden divTop slider">
                             <div></div>
                             <div>
-                                <p class="textAlignLeft">Música</p>
+                                <p class="textAlignLeft textControl">Música</p>
                             </div>
                             <div></div>
                             <div></div>
@@ -101,14 +101,14 @@
                             <div></div>
                             <div></div>
                             <div>
-                                <p class="textAlignLeft">Texto</p>
+                                <p class="textAlignLeft textControl">Texto</p>
                             </div>
                             <div></div>
                         </div>
                         <div class="interation hidden divBottom slider">
                             <div></div>
                             <div>
-                                <p class="textAlignLeft">Voz</p>
+                                <p class="textAlignLeft textControl">Voz</p>
                             </div>
                             <div></div>
                             <div></div>
@@ -126,7 +126,7 @@
                             <div></div>
                             <div></div>
                             <div>
-                                <p class="textAlignLeft">Imagem</p>
+                                <p class="textAlignLeft textControl">Imagem</p>
                             </div>
                             <div></div>
                         </div>
