--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
                     <p>“Selvagem”</p>
                     <p class="textAlignRight">de</p>
                     <p>Salvador Santos</p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p><br></p>
+                    <p class="textAlignRight">Coloca o telemóvel</p>
+                    <p class="textAlignRight">na horizontal</p>
                 </div>
                 <div class="col-10-desktop">
                     <p>Luz</p>
